Fixed bug on IE11 where background would jump up and down when scrolling.
Is known bug with IE11 and background-attachment: fixed. Only solution I found was to only use it on the <body> element.

Now the background it on the <body> element, instead of both the <body> and <html> elements.

--- a/styles/main.css
+++ b/styles/main.css
@@ -256,6 +256,9 @@ html, body {
   font-family: 'montserrat', sans-serif;
   color: white;
   scroll-behavior: smooth;
+}
+
+body {
   background: url("/assets/images/background.jpg");
   background-color: black;
   background-repeat: no-repeat;
